make template more usable

--- a/template/Ex.tex
+++ b/template/Ex.tex
@@ -8,8 +8,10 @@
 
 
 \begin{document}
-    \input{framside.tex}
-    
-   
+\input{../template/framside.tex}
+\setExerciseNumber{1}
 
-    \end{document}
+\section*{\textbf{Problem 1}}
+\vspace*{12pt}\small\textbf{a)}
+
+\end{document}
