--- a/template/framside.tex
+++ b/template/framside.tex
@@ -1,22 +1,22 @@
+\newcommand{\setExerciseNumber}[1]{%
+    \begin{titlepage}
+        \vbox{ }
+        \vbox{ }
+        \begin{center}
+            % Set course here
+            \includegraphics[width=0.40\textwidth]{../template/img/NTNU_logo.png}\\[1cm]
+            \textsc{\Large TIØ4120 - Operasjonsanalyse, grunnkurs}\\[0.5cm]
+            \vbox{ }
 
+            % Set title here
+            { \huge \bfseries Exercise \##1}\\[0.4cm]
 
-\begin{titlepage}
-    \vbox{ }
-    \vbox{ }
-    \begin{center}
-        % Set course here
-        \includegraphics[width=0.40\textwidth]{img/NTNU_logo.png}\\[1cm]
-    \textsc{\Large TMA4135 - Matematikk 4D}\\[0.5cm]
-    \vbox{ }
-    
-    % Set title here
-    { \huge \bfseries Execise \#1}\\[0.4cm]
-    
-    \large
-    \emph{Author:}\\
-    Sondre Pedersen
-    \vfill
-    
-    {\large\today}
-\end{center}
-\end{titlepage}
+            \large
+            \emph{Author:}\\
+            Sondre Pedersen
+            \vfill
+
+            {\large\today}
+        \end{center}
+    \end{titlepage}
+}
